[tool]

[tool.poetry]
authors = ["Gabriel Lemieux <19gml2@queensu.ca>", "Sean Cullum <>", "James <>", "Emily Parkinson <>"]
description = "Template for the major project in CISC 204."
license = "MIT"
name = "laser_chess204"
readme = "README.md"
version = "1.0"

[tool.poetry.dependencies]
nnf = "^0.3.0"
python = "^3.8"
